# tender-research-agent

./: .gitignore  README.md  env.example  pyproject.toml  rfp.docx
app/: __init__.py  __main__.py  api.py  cli.py  config.py
app/agents/: __init__.py  base_agent.py  research_agent.py  validator_agent.py  writer_agent.py
app/models/: __init__.py  schemas.py
app/orchestrator/: __init__.py  workflow.py
app/prompts/: __init__.py  agent_prompts.py
app/store/: __init__.py  logger.py
app/tools/: __init__.py  comprehensive_result_generator.py  document_processor.py  research_storage.py  search.py  unified_bid_generator.py
data/bid_research/7e6b74b7-efe1-4317-9bdb-81e175c2e91e/: BID_WRITER_SUMMARY.md  bid_research_package.json  bid_strategy.json  quick_reference.json  requirements_analysis.json
data/bid_research/9dab1d15-6afb-41b5-a2e4-46ab596212e4/: BID_WRITER_SUMMARY.md  bid_research_package.json  bid_strategy.json  evidence_repository.json  quick_reference.json  requirements_analysis.json
data/bid_research/a0df4ea5-c8a7-4910-b01e-f5c8aec5e85e/: BID_WRITER_SUMMARY.md  bid_research_package.json  bid_strategy.json  evidence_repository.json  quick_reference.json  requirements_analysis.json
data/comprehensive_results/7e6b74b7-efe1-4317-9bdb-81e175c2e91e/: result.json
data/comprehensive_results/9dab1d15-6afb-41b5-a2e4-46ab596212e4/: result.json
data/comprehensive_results/a0df4ea5-c8a7-4910-b01e-f5c8aec5e85e/: result.json
data/runs/49581203-6540-4e4a-aea1-1612241fe720/: inputs.json  summary.json
data/runs/7e6b74b7-efe1-4317-9bdb-81e175c2e91e/: findings.json  inputs.json  outline.md  summary.json  validation.json
data/runs/9dab1d15-6afb-41b5-a2e4-46ab596212e4/: findings.json  inputs.json  outline.md  summary.json  validation.json
samples/: sample_rfp.md
tests/: __init__.py
tests/integration/: test_workflow.py
tests/unit/: test_models.py  test_tools.py
(+11 files in other folders)
