[tool.poetry]
name = "tender-research-agent"
version = "0.1.0"
description = "Multi-Agent Research & Validation System for RFP/Tender Processing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0.0"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pdfplumber = "^0.10.0"
pymupdf = "^1.23.0"
python-docx = "^1.1.0"
sentence-transformers = "^2.2.0"
# chromadb = "^0.4.0"  # Disabled due to C++ build requirements on Windows
rank-bm25 = "^0.2.2"
diskcache = "^5.6.0"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
rich = "^13.7.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.7.0"
ruff = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.7.0"
ruff = "^0.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "N", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
